--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+bluer = { version = "0.17.3", features = ["full"] }
+env_logger = "0.11.5"
+futures = "0.3.30"
+tokio = { version = "1.39.2", features = ["macros", "rt"] }
