--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,7 @@ edition = "2021"
 bluer = { version = "0.17.3", features = ["full"] }
 env_logger = "0.11.5"
 futures = "0.3.30"
+reqwest = "0.12.5"
+serde = "1.0.207"
+serde_json = "1.0.124"
 tokio = { version = "1.39.2", features = ["macros", "rt"] }
